tests/ui/rfcs/rfc-0000-never_patterns/check.stderr
error: a never pattern is always unreachable
  --> $DIR/check.rs:15:20
   |
LL |         Some(!) => {}
   |                    ^^
   |                    |
   |                    this will never be executed
   |                    help: remove this expression

error: a guard on a never pattern will never be run
  --> $DIR/check.rs:20:20
   |
LL |         Some(!) if true,
   |                    ^^^^ help: remove this guard

error: a never pattern is always unreachable
  --> $DIR/check.rs:25:28
   |
LL |         Some(!) if true => {}
   |                            ^^
   |                            |
   |                            this will never be executed
   |                            help: remove this expression

error: a never pattern is always unreachable
  --> $DIR/check.rs:30:27
   |
LL |         Some(never!()) => {}
   |                           ^^
   |                           |
   |                           this will never be executed
   |                           help: remove this expression

error[E0004]: non-exhaustive patterns: `&Some(!)` not covered
  --> $DIR/check.rs:19:11
   |
LL |     match &None::<Void> {
   |           ^^^^^^^^^^^^^ pattern `&Some(!)` not covered
   |
note: `Option<Void>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `&Option<Void>`
   = note: `Void` is uninhabited but is not being matched by value, so a wildcard `_` is required
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         &Some(!)
   |

error[E0004]: non-exhaustive patterns: `&Some(!)` not covered
  --> $DIR/check.rs:24:11
   |
LL |     match &None::<Void> {
   |           ^^^^^^^^^^^^^ pattern `&Some(!)` not covered
   |
note: `Option<Void>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
  ::: $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: not covered
   = note: the matched value is of type `&Option<Void>`
   = note: `Void` is uninhabited but is not being matched by value, so a wildcard `_` is required
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         None => {},
LL +         &Some(!)
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0004`.
